Fix [DEV-9860] feedback (#1741)
* fix: legend overflowing text

* fix: hexagon cut off

--- a/packages/map/src/components/Legend/components/index.scss
+++ b/packages/map/src/components/Legend/components/index.scss
@@ -112,11 +112,6 @@
 
         &:not(.vertical-sorted, .legend-container__ul--single-column, .single-row) {
           width: 100%;
-          @include breakpoint(sm) {
-            .legend-container__li {
-              width: 50%;
-            }
-          }
         }
         .legend-container__li {
           flex-shrink: 0;
